--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -1,4 +1,4 @@
-<img src="{{ asset.url }}/images/{{ site.owner.avatar }}" class="bio-photo" alt="{{ site.owner.name }} bio photo"></a>
+<img src="{{ site.asset.url }}/images/{{ site.owner.avatar }}" class="bio-photo" alt="{{ site.owner.name }} bio photo"></a>
 <h3>{{ site.owner.name }}</h3>
 <p>{{ site.owner.bio }}</p>
 {% if site.owner.hmfaysalsocial %}<a href="http://social.hmfaysal.tk/index.php?a=profile&u={{ site.owner.hmfaysalsocial }}" class="author-social" target="_blank"><i class="icon-droplet"></i> HMFaysal Social</a>{% endif %}
